# FactorySim

./: .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: .gitkeep
docs/: architecture.md  faq.md  getting-started.md  parameter-sweep.md  plugin-development.md  simulation-engine.md
electron/: database.ts  ipc-handlers.ts  main.ts  preload.ts  python-bridge.ts  sql.js.d.ts
landing/: index.html
public/: help.html
python/: pyproject.toml  requirements.txt
python/factorysim/: __init__.py
python/factorysim/api/: __init__.py  server.py
python/factorysim/connectors/: __init__.py  csv_connector.py  mes_connector.py  mqtt_connector.py  opcua_connector.py
python/factorysim/engine/: __init__.py  buffer.py  distributions.py  extra_nodes.py  plugin.py  product.py  resource.py  simulation.py  station.py
python/factorysim/examples/: example_plugin.py
python/factorysim/kpi/: __init__.py  bottleneck.py  oee.py  throughput.py
python/tests/: __init__.py  debug_assembly.py  debug_batch.py  debug_paint.py  run_all_comprehensive.py  test_all_templates.py  test_extra_nodes.py  test_scenarios.py  test_simulation.py  test_source_sink_operator.py  test_validation_logging.py
resources/: generate_icon.py
scripts/: capture-tabs.cjs  capture-tabs.mjs  setup.bat  setup.sh
src/: App.tsx
(+115 files in other folders)
